--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -4,6 +4,7 @@
 @import 'variables';
 
   .field-name-field-quotes {
+    display:inline-block;
     position: absolute;
     width: 300px;
     font-size: 2.813em;
