--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -11,6 +11,7 @@
   background-size: 51px; }
 
 .field-name-field-quotes {
+  display: inline-block;
   position: absolute;
   width: 300px;
   font-size: 2.813em;
