--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -468,8 +468,9 @@ a {
   }
   .view-header {
     color:$orange;
-    font-size:32px;
+    font-size:46px;
     font-weight:700;
+    text-transform:uppercase;
   }
 }
 
@@ -1369,6 +1370,7 @@ h2 {
   font-size: 46px;
   margin-bottom: 0;
   margin-top: 0;
+  text-transform:uppercase;
 }
 
 .view-id-filmfestival {
