--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -461,9 +461,43 @@ a {
 
 .context-nieuws {
   .group-left {
-    width:36%!important;
+    width:26%!important;
     img {
       float:left;
+    }
+  }
+  .group-right {
+    width:74%!important;
+    .field-name-field-title {
+      width:35%;
+      float:left;
+      a {
+        color:#000;
+        width:50%;
+        font-size:30px;
+      }
+    }
+    .field-name-field-date {
+      width:65%;
+      float:left;
+      text-transform:uppercase;
+      font-weight:700;
+      text-align:center;
+    }
+    .field-name-field-samenvatting {
+      width:100%;
+      float:left;
+    }
+    .field-name-node-link {
+      width:100%;
+      float:left;
+      a {
+        color:#fff;
+        width:10%;
+        background-color:#000;
+        float:right;
+        text-align:center;
+      }
     }
   }
   .view-header {
