--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -468,7 +468,7 @@ a {
   }
   .group-right {
     width:74%!important;
-    .field-name-field-title {
+    .field-name-title {
       width:35%;
       float:left;
       a {
