--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -527,8 +527,7 @@ a {
     width: 65%;
     float: left;
     text-transform: uppercase;
-    font-weight: 700;
-    text-align: center; }
+    font-weight: 700; }
   .context-nieuws .group-right .field-name-field-samenvatting {
     width: 100%;
     float: left; }
