--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -355,7 +355,7 @@
   }
 }
 
-.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10, .block-block-9{
+.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10, .block-block-9, .block-block-11{
   width:50%;
   float:left;
 }
