--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1188,7 +1188,7 @@ input[type="submit"] {
   }
 }
 
-.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10, .block-block-9 {
+.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10, .block-block-9, .block-block-11 {
   width:100%;
   float:left;
   .orange {
