--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1500,3 +1500,9 @@ ul#superfish-1 li {
     padding-bottom:50px;
   }
 }
+
+.views-exposed-form-cast-crew-page {
+  .form-type-radio {
+    float:left;
+  }
+}
