--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1242,4 +1242,7 @@ ul#superfish-1 li ul {
 .front .zone-preface-wrapper {
   padding-bottom: 50px; }
 
+.views-exposed-form-cast-crew-page .form-type-radio {
+  float: left; }
+
 /*# sourceMappingURL=global.css.map */
