--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1501,7 +1501,7 @@ ul#superfish-1 li {
   }
 }
 
-.views-exposed-form-cast-crew-page {
+#views-exposed-form-cast-crew-page {
   .form-type-radio {
     float:left;
   }
