--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -764,6 +764,36 @@ input[type="submit"] {
   .views-widget-filter-field_catogorie_cast_crew_tid .form-item-field-catogorie-cast-crew-tid input[type="checkbox"] {
     display: none; }
 
+.views-widget-filter-field_categorie_crew_tid {
+  width: 100%; }
+  .views-widget-filter-field_categorie_crew_tid label[for=edit-field-catogorie-cast-crew-tid] {
+    background-color: #000;
+    border-radius: 3px;
+    color: #fff;
+    text-align: center;
+    padding: 3px;
+    float: left; }
+  .views-widget-filter-field_categorie_crew_tid .form-item-field-catogorie-cast-crew-tid .form-item {
+    background-color: gray;
+    border-radius: 3px;
+    color: #fff;
+    text-align: center;
+    padding: 3px 20px;
+    float: left;
+    margin: 0 10px;
+    float: left; }
+  .views-widget-filter-field_categorie_crew_tid .form-item-field-catogorie-cast-crew-tid .form-item.highlight {
+    float: left;
+    background-color: #000;
+    border-radius: 3px;
+    color: #fff;
+    text-align: center;
+    padding: 3px 20px;
+    float: left;
+    margin: 0 10px; }
+  .views-widget-filter-field_categorie_crew_tid .form-item-field-catogorie-cast-crew-tid input[type="checkbox"] {
+    display: none; }
+
 .node-crew-cast .field-name-field-naam {
   font-size: 24px;
   color: #000;
