--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -838,6 +838,7 @@ input[type="submit"] {
     float:left;
   }
   .form-item-field-categorie-crew-tid {
+    float:left;
     .form-item {
       background-color: gray;
       border-radius: 3px;
