--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -773,26 +773,28 @@ input[type="submit"] {
     text-align: center;
     padding: 3px;
     float: left; }
-  .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid .form-item {
-    background-color: gray;
-    border-radius: 3px;
-    color: #fff;
-    text-align: center;
-    padding: 3px 20px;
-    float: left;
-    margin: 0 10px;
+  .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid {
     float: left; }
-  .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid .form-item.highlight {
-    float: left;
-    background-color: #000;
-    border-radius: 3px;
-    color: #fff;
-    text-align: center;
-    padding: 3px 20px;
-    float: left;
-    margin: 0 10px; }
-  .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid input[type="checkbox"] {
-    display: none; }
+    .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid .form-item {
+      background-color: gray;
+      border-radius: 3px;
+      color: #fff;
+      text-align: center;
+      padding: 3px 20px;
+      float: left;
+      margin: 0 10px;
+      float: left; }
+    .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid .form-item.highlight {
+      float: left;
+      background-color: #000;
+      border-radius: 3px;
+      color: #fff;
+      text-align: center;
+      padding: 3px 20px;
+      float: left;
+      margin: 0 10px; }
+    .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid input[type="checkbox"] {
+      display: none; }
 
 .node-crew-cast .field-name-field-naam {
   font-size: 24px;
