--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -785,15 +785,15 @@ input[type="submit"] {
     float: left; }
     .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid input[type="checkbox"] {
       display: none; }
-    .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid .form-item-field-categorie-crew-tid .active {
-      float: left;
-      background-color: #000;
-      border-radius: 3px;
-      color: #fff;
-      text-align: center;
-      padding: 3px 20px;
-      float: left;
-      margin: 0 10px; }
+  .views-widget-filter-field_categorie_crew_tid .form-item-field-categorie-crew-tid .active {
+    float: left;
+    background-color: #000;
+    border-radius: 3px;
+    color: #fff;
+    text-align: center;
+    padding: 3px 20px;
+    float: left;
+    margin: 0 10px; }
 
 .node-crew-cast .field-name-field-naam {
   font-size: 24px;
