--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -847,7 +847,7 @@ input[type="submit"] {
     float: left;
     margin: 0 10px;
     float:left;
-    input[type="checkbox"] {
+    input[type="radio"] {
       display:none;
     }
   }
