--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -829,6 +829,9 @@ input[type="submit"] {
 
 .views-widget-filter-field_categorie_crew_tid {
   width:100%;
+  font-family:$font;
+  font-weight:100;
+  font-size:14px;
   label[for=edit-field-categorie-crew-tid] {
     background-color: #000;
     border-radius: 3px;
