--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -769,6 +769,8 @@ input[type="submit"] {
   font-family: "Ruda", sans-serif;
   font-weight: 100;
   font-size: 14px; }
+  .views-widget-filter-field_categorie_crew_tid .views-exposed-form label {
+    font-weight: 100 !important; }
   .views-widget-filter-field_categorie_crew_tid label[for=edit-field-categorie-crew-tid] {
     background-color: #000;
     border-radius: 3px;
