--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -842,6 +842,8 @@ input[type="submit"] {
     text-align: center;
     padding: 3px;
     float:left;
+    margin:0 10px;
+    margin-bottom:10px;
   }
   .form-item-field-categorie-crew-tid {
     float:left;
@@ -853,6 +855,7 @@ input[type="submit"] {
     float: left;
     margin: 0 10px;
     float:left;
+    margin-bottom:10px;
     input[type="radio"] {
       display:none;
     }
