--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -834,6 +834,9 @@ input[type="submit"] {
   width: 61%;
   float: left; }
 
+.block-views-exp-cast-crew-page-1 {
+  width: 85%; }
+
 .page-filmrecruitz-cast .block-webform, .page-filmrecruitz-crew .block-webform {
   width: 15%;
   float: left;
