--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -918,6 +918,10 @@ input[type="submit"] {
   float:left;
 }
 
+.block-views-exp-cast-crew-page-1 {
+  width:85%;
+}
+
 .page-filmrecruitz-cast, .page-filmrecruitz-crew {
   .block-webform {
     width: 15%;
