--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -5,10 +5,10 @@
   display: inline-block;
   position: absolute;
   width: 300px;
-  font-size: 2.813em;
+  font-size: 39px;
   color: #fff;
-  top: 9%;
-  padding-left: 11%;
+  top: 17%;
+  padding-left: 4%;
   text-shadow: 1px 1px 1px #050505;
   font-weight: 700;
   line-height: 1.1; }
