--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -33,4 +33,7 @@
 .block-filmrecruitz-block .views-row {
   width: 59%; }
 
+#block-bean-socialmedia img {
+  padding-right: 1%; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
