--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -363,11 +363,11 @@ a {
   margin-top:20px;
   img {
     padding-right:1%;
+    margin-top:5px;
   }
   .field-name-field-link-image {
     float:right;
     width:100%;
-
   }
 }
 
