--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1270,6 +1270,7 @@ input[type="submit"] {
   .group-left {
     width:30%!important;
     .field-name-field-profielfoto {
+      width:90%;
       img {
         float:left;
       }
