--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -36,4 +36,7 @@
 #block-bean-socialmedia img {
   padding-right: 1%; }
 
+.block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
+  width: 66%; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
