--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -920,13 +920,14 @@ input[type="submit"] {
 }
 
 
-.block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
-  width:66%;
+.block-views-exp-cast-crew-page {
+  width:80%;
   float:left;
 }
 
 .block-views-exp-cast-crew-page-1 {
   width:85%;
+  float:left;
 }
 
 .page-filmrecruitz-cast, .page-filmrecruitz-crew {
