--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -289,4 +289,9 @@
   width: 100%;
   float: left; }
 
+.block-views-eenvoudigepagina-block {
+  top: 17%; }
+  .block-views-eenvoudigepagina-block .views-row .field-name-field-link-filmrecruitz {
+    width: 91%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
