--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -371,3 +371,12 @@
     float:left;
   }
 }
+
+.block-views-eenvoudigepagina-block {
+  top: 17%;
+  .views-row {
+    .field-name-field-link-filmrecruitz {
+      width: 91%;
+    }
+  }
+}
