--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -65,3 +65,12 @@
 .block-views-exp-cast-crew-page, .block-views-exp-cast-crew-page-1 {
   width:66%;
 }
+
+.block-views-eenvoudigepagina-block {
+  top: 10%;
+  .views-row {
+    .field-name-field-link-filmrecruitz {
+      width: 59%;
+    }
+  }
+}
