--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -59,4 +59,8 @@
 .block-filmrecruitz-block .views-row {
   width: 89%; }
 
+.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
+  width: 297px;
+  height: 231px; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
