--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -44,4 +44,8 @@
   .block-views-eenvoudigepagina-block .views-row .field-name-field-link-filmrecruitz {
     width: 59%; }
 
+.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
+  width: 373px;
+  height: 300px; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
