--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -74,3 +74,17 @@
     }
   }
 }
+
+.paragraphs-item-3-kolommen-video-s {
+  .field-name-field-videos {
+    .field-items {
+      .field-item {
+        iframe {
+          width:373px;
+          height:300px;
+
+        }
+      }
+    }
+  }
+}
