--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -98,3 +98,17 @@
     width: 89%;
   }
 }
+
+.paragraphs-item-3-kolommen-video-s {
+  .field-name-field-videos {
+    .field-items {
+      .field-item {
+        iframe {
+          width:297px;
+          height:231px;
+
+        }
+      }
+    }
+  }
+}
