--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -48,4 +48,8 @@
   width: 373px;
   height: 300px; }
 
+.paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
+  width: 317px;
+  height: 267px; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
