--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -76,13 +76,28 @@
 }
 
 .paragraphs-item-3-kolommen-video-s {
-  .field-name-field-videos {
-    .field-items {
-      .field-item {
-        iframe {
-          width:373px;
-          height:300px;
+   .field-name-field-videos {
+     .field-items {
+       .field-item {
+         iframe {
+           width:373px;
+           height:300px;
 
+         }
+       }
+     }
+   }
+ }
+
+.paragraphs-item-2-kolommen-tekst-video {
+  .group-right {
+    .field-name-field-video {
+      .field-items {
+        .field-item {
+          iframe {
+            width:317px;
+            height:267px;
+          }
         }
       }
     }
