--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -63,4 +63,8 @@
   width: 297px;
   height: 231px; }
 
+.paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
+  width: 317px;
+  height: 267px; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
