--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -112,3 +112,18 @@
     }
   }
 }
+
+.paragraphs-item-2-kolommen-tekst-video {
+  .group-right {
+    .field-name-field-video {
+      .field-items {
+        .field-item {
+          iframe {
+            width:317px;
+            height:267px;
+          }
+        }
+      }
+    }
+  }
+}
