--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -294,4 +294,7 @@
   .block-views-eenvoudigepagina-block .views-row .field-name-field-link-filmrecruitz {
     width: 91%; }
 
+.view-id-filmfestival .views-row .views-field-title {
+  font-size: 21px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
