--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -52,4 +52,7 @@
   width: 373px;
   height: 300px; }
 
+.view-id-filmfestival .views-row .views-field-title {
+  font-size: 24px; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
