--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -297,4 +297,9 @@
 .view-id-filmfestival .views-row .views-field-title {
   font-size: 21px; }
 
+.context-nieuws .group-right .field-name-title h2 {
+  font-size: 23px; }
+.context-nieuws .group-right .field-name-node-link a {
+  width: 14%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
