--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -388,3 +388,18 @@
     }
   }
 }
+
+.context-nieuws {
+  .group-right {
+    .field-name-title {
+      h2 {
+        font-size: 23px;
+      }
+    }
+    .field-name-node-link {
+      a {
+        width:14%;
+      }
+    }
+  }
+}
