--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -111,3 +111,18 @@
     }
   }
 }
+
+.context-nieuws {
+  .group-right {
+    .field-name-title {
+      h2 {
+        font-size: 25px;
+      }
+    }
+    .field-name-node-link {
+      a {
+        width:10%;
+      }
+    }
+  }
+}
