--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -55,4 +55,9 @@
 .view-id-filmfestival .views-row .views-field-title {
   font-size: 24px; }
 
+.context-nieuws .group-right .field-name-title h2 {
+  font-size: 25px; }
+.context-nieuws .group-right .field-name-node-link a {
+  width: 10%; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
