--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -116,7 +116,9 @@
   .group-right {
     .field-name-title {
       h2 {
-        font-size: 25px;
+        a {
+          font-size: 30px;
+        }
       }
     }
     .field-name-node-link {
