--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1300,4 +1300,7 @@ ul#superfish-1 li ul {
 #views-exposed-form-cast-crew-page .form-type-radio {
   float: left; }
 
+.zone-header {
+  padding-top: 36px; }
+
 /*# sourceMappingURL=global.css.map */
