--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -128,4 +128,12 @@
   }
 }
 
+.block-views-eenvoudigepagina-block {
+  top: 17%;
+  .views-row {
+    .field-name-field-link-filmrecruitz {
+      width: 91%;
+    }
+  }
+}
 
