--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -67,4 +67,9 @@
   width: 317px;
   height: 267px; }
 
+.block-views-eenvoudigepagina-block {
+  top: 17%; }
+  .block-views-eenvoudigepagina-block .views-row .field-name-field-link-filmrecruitz {
+    width: 91%; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
