--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -302,4 +302,8 @@
 .context-nieuws .group-right .field-name-node-link a {
   width: 14%; }
 
+.paragraphs-item-3-kolommen-video-s .field-name-field-videos .field-items .field-item iframe {
+  width: 225px;
+  height: 211px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
