--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -405,3 +405,18 @@
     }
   }
 }
+
+
+.paragraphs-item-3-kolommen-video-s {
+  .field-name-field-videos {
+    .field-items {
+      .field-item {
+        iframe {
+          width:225px;
+          height:211px;
+
+        }
+      }
+    }
+  }
+}
