--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -306,4 +306,8 @@
   width: 225px;
   height: 211px; }
 
+.paragraphs-item-2-kolommen-tekst-video .group-right .field-name-field-video .field-items .field-item iframe {
+  width: 253px;
+  height: 238px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
