--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -420,3 +420,18 @@
     }
   }
 }
+
+.paragraphs-item-2-kolommen-tekst-video {
+  .group-right {
+    .field-name-field-video {
+      .field-items {
+        .field-item {
+          iframe {
+            width:253px;
+            height:238px;
+          }
+        }
+      }
+    }
+  }
+}
