--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -310,4 +310,8 @@
   width: 253px;
   height: 238px; }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item iframe {
+  width: 228px;
+  height: 200px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
