--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -435,3 +435,17 @@
     }
   }
 }
+
+.paragraphs-item-3-kolommen-tekst-video-tekst {
+  .field-name-field-video {
+    .field-items {
+      .field-item {
+        iframe {
+          width:228px;
+          height:200px;
+
+        }
+      }
+    }
+  }
+}
