--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -72,4 +72,8 @@
   .block-views-eenvoudigepagina-block .views-row .field-name-field-link-filmrecruitz {
     width: 91%; }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item iframe {
+  width: 300px;
+  height: 200px; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
