--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -137,3 +137,17 @@
   }
 }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst {
+  .field-name-field-video {
+    .field-items {
+      .field-item {
+        iframe {
+          width:300px;
+          height:200px;
+
+        }
+      }
+    }
+  }
+}
+
