--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -76,4 +76,7 @@
   width: 300px;
   height: 200px; }
 
+.view-id-filmfestival .views-row .views-field-title {
+  font-size: 21px; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
