--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -79,4 +79,9 @@
 .view-id-filmfestival .views-row .views-field-title {
   font-size: 21px; }
 
+.context-nieuws .group-right .field-name-title h2 a {
+  font-size: 23px; }
+.context-nieuws .group-right .field-name-node-link a {
+  width: 14%; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
