--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -159,3 +159,20 @@
   }
 }
 
+.context-nieuws {
+  .group-right {
+    .field-name-title {
+      h2 {
+        a {
+          font-size: 23px;
+        }
+      }
+    }
+    .field-name-node-link {
+      a {
+        width:14%;
+      }
+    }
+  }
+}
+
