--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -314,4 +314,10 @@
   width: 228px;
   height: 200px; }
 
+.front .zone-preface-wrapper {
+  padding-bottom: 50px; }
+
+.zone-preface-wrapper {
+  padding-top: 50px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
