--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -449,3 +449,13 @@
     }
   }
 }
+
+.front {
+  .zone-preface-wrapper {
+    padding-bottom:50px;
+  }
+}
+
+.zone-preface-wrapper {
+  padding-top:50px;
+}
