--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -187,7 +187,8 @@
     width: 87%; }
 
 .region-footer-first .block-menu li {
-  width: 20%; }
+  width: 20%;
+  height: 183px; }
 
 .context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
   width: 27%; }
