--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -460,3 +460,10 @@
 .zone-preface-wrapper {
   padding-top:50px;
 }
+
+#block-bean-logo-0, #block-bean-socialmedia {
+  img {
+    float:right;
+    padding-top:10px;
+  }
+}
