--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -355,7 +355,8 @@ a {
 /* Footer */
 #block-bean-logo-0, #block-bean-socialmedia {
   img {
-    float:right;
+    float:left;
+    padding-top:32px;
   }
 }
 
