--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -325,4 +325,7 @@
   float: right;
   padding-top: 10px; }
 
+.zone-header {
+  padding-top: 30px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
