--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -328,4 +328,8 @@
 .zone-header {
   padding-top: 30px; }
 
+.context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
+  width: 16%;
+  float: right; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
