--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -471,3 +471,12 @@
 .zone-header {
   padding-top:30px;
 }
+
+.context-filmrecruitzz, .context-filmrecruitz {
+  .region-user-first {
+    .block-block-2 {
+      width:16%;
+      float:right;
+    }
+  }
+}
