--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -312,8 +312,8 @@ a {
     margin: 0;
     margin-left: 0px; }
     .block-superfish-2 ul li a, .block-superfish-3 ul li a {
-      font-size: 18px;
-      padding: 0px 11px;
+      font-size: 15px;
+      padding: 0px 8px;
       font-weight: 700;
       color: #3989c9;
       text-transform: uppercase;
@@ -1083,12 +1083,12 @@ input[type="submit"] {
   .block-block-3 .orange h2, .block-block-4 .orange h2, .block-block-5 .orange h2, .block-block-6 .orange h2, .block-block-8 .orange h2, .block-block-10 .orange h2, .block-block-9 .orange h2, .block-block-11 .orange h2 {
     color: #f78b1f;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 44px;
     margin-bottom: 0; }
   .block-block-3 .blue h2, .block-block-4 .blue h2, .block-block-5 .blue h2, .block-block-6 .blue h2, .block-block-8 .blue h2, .block-block-10 .blue h2, .block-block-9 .blue h2, .block-block-11 .blue h2 {
     color: #3989c9;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 44px;
     margin-bottom: 0; }
 
 .node-type-crew .group-left {
@@ -1299,5 +1299,8 @@ ul#superfish-1 li ul {
 
 .zone-header {
   padding-top: 24px; }
+
+.zone-preface {
+  padding-top: 30px; }
 
 /*# sourceMappingURL=global.css.map */
