--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -276,12 +276,19 @@
 .block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10, .block-block-9, .block-block-11 {
   width: 50%;
   float: left; }
+  .block-block-3 .orange h2, .block-block-4 .orange h2, .block-block-5 .orange h2, .block-block-6 .orange h2, .block-block-8 .orange h2, .block-block-10 .orange h2, .block-block-9 .orange h2, .block-block-11 .orange h2 {
+    font-size: 50px; }
+  .block-block-3 .blue h2, .block-block-4 .blue h2, .block-block-5 .blue h2, .block-block-6 .blue h2, .block-block-8 .blue h2, .block-block-10 .blue h2, .block-block-9 .blue h2, .block-block-11 .blue h2 {
+    font-size: 50px; }
 
 .block-superfish-2, .block-superfish-3 {
   float: left;
   padding-bottom: 10px;
   width: 50%;
   margin-top: 20px; }
+  .block-superfish-2 ul li a, .block-superfish-3 ul li a {
+    font-size: 18px;
+    padding: 0px 11px; }
 
 #block-views-filmrecruitz-switch a {
   width: 50%;
