--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -353,6 +353,17 @@
 .block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10, .block-block-9, .block-block-11{
   width:50%;
   float:left;
+  .orange {
+    h2 {
+      font-size:50px;
+    }
+  }
+
+  .blue {
+    h2 {
+      font-size:50px;
+    }
+  }
 }
 
 .block-superfish-2, .block-superfish-3 {
@@ -360,6 +371,14 @@
   padding-bottom:10px;
   width:50%;
   margin-top:20px;
+  ul {
+    li {
+      a {
+        font-size: 18px;
+        padding: 0px 11px;
+      }
+    }
+  }
 }
 
 #block-views-filmrecruitz-switch {
