--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -499,3 +499,14 @@
     }
   }
 }
+
+.views-widget-filter-field_catogorie_cast_crew_tid {
+  .form-item-field-catogorie-cast-crew-tid {
+    padding: 3px 20px;
+    margin: 0 10px;
+  }
+  .form-item-field-catogorie-cast-crew-tid.active {
+    padding: 3px 20px;
+    margin:0 10px;
+  }
+}
