--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -346,4 +346,7 @@
   padding: 3px 20px;
   margin: 0 10px; }
 
+.block-views-exp-cast-crew-page {
+  width: 80%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
