--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -349,4 +349,7 @@
 .block-views-exp-cast-crew-page {
   width: 80%; }
 
+.page-filmrecruitz-cast .block-webform, .page-filmrecruitz-crew .block-webform {
+  width: 15%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
