--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -514,3 +514,9 @@
 .block-views-exp-cast-crew-page {
   width:80%;
 }
+
+.page-filmrecruitz-cast, .page-filmrecruitz-crew {
+  .block-webform {
+    width: 15%;
+  }
+}
