--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -352,4 +352,20 @@
 .page-filmrecruitz-cast .block-webform, .page-filmrecruitz-crew .block-webform {
   width: 15%; }
 
+.view-id-cast_crew .views-row {
+  width: 25%; }
+.view-id-cast_crew .views-field-field-naam {
+  display: none;
+  position: absolute;
+  top: 85px;
+  left: 20px;
+  text-align: center;
+  color: #fff;
+  font-size: 24px;
+  z-index: 1;
+  border-bottom: 1px solid; }
+.view-id-cast_crew .views-field-field-profielfoto {
+  margin-top: -300px;
+  width: 83%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
