--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -520,3 +520,24 @@
     width: 15%;
   }
 }
+
+.view-id-cast_crew {
+  .views-row {
+    width:25%;
+  }
+  .views-field-field-naam {
+    display: none;
+    position: absolute;
+    top: 85px;
+    left: 20px;
+    text-align:center;
+    color: #fff;
+    font-size: 24px;
+    z-index: 1;
+    border-bottom: 1px solid;
+  }
+  .views-field-field-profielfoto {
+    margin-top: -300px;
+    width:83%;
+  }
+}
