--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -709,7 +709,15 @@ input[type="submit"] {
   float: left;
   position: relative; }
 .view-id-cast_crew .views-field-field-naam {
-  display: none; }
+  display: none;
+  position: absolute;
+  top: 85px;
+  left: 20px;
+  text-align: center;
+  color: #fff;
+  font-size: 24px;
+  z-index: 1;
+  border-bottom: 1px solid; }
 .view-id-cast_crew .views-field-field-profielfoto {
   margin-top: -300px;
   width: 100%; }
