--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -541,3 +541,22 @@
     width:83%;
   }
 }
+
+.block-views-exp-cast-crew-page-1 {
+  width:85%;
+  float:left;
+}
+
+.views-widget-filter-field_categorie_crew_tid {
+  label[for=edit-field-categorie-crew-tid] {
+    margin:0 10px;
+  }
+  .form-item-field-categorie-crew-tid {
+    padding: 3px 20px;
+    margin: 0 10px;
+  }
+  .form-item-field-categorie-crew-tid.active {
+    padding: 3px 20px;
+    margin:0 10px;
+  }
+}
