--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -560,3 +560,18 @@
     margin:0 10px;
   }
 }
+
+.node-type-crew {
+  .group-left {
+    width:30%!important;
+    .field-name-field-profielfoto {
+      width:90%;
+    }
+  }
+  .group-middle {
+    width:30%!important;
+  }
+  .group-right {
+ width:33%!important;
+  }
+}
